--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Chipi Chipi Chapa Chapa Rubu RUbi Raba Raba</a>.</p>
+    <p>FROM GIT REPO</a>.</p>
 </div>
